# slider_video_codex

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/services/: exporter.py
app/ui/: __init__.py  dragdrop_controller.py  kivy_app.py
app/view/screens/: editor_screen.py
app/viewmodel/: session_state.py
assets/sample/: README.md
converter/: slide_generator.py  video_ingest.py
docs/: index.md  mcp_robust_prompt.txt
mcp_robust_apk_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_dragdrop_controller.py  test_slide_generator.py  test_video_ingest.py
