[project]
name = "mcp-robust-apk-builder"
version = "0.1.0"
description = "Ferramentas para ingestão de vídeos e geração de slides para o APK dinâmico."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Slider Video Codex" }
]
dependencies = [
  "opencv-python>=4.12.0",
  "Pillow>=12.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0"
]

[tool.setuptools]
packages = ["app", "converter"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
